# nested-cmake

./: CMakeLists.txt
include/: Greeter.hpp
lib/snacks/: CMakeLists.txt
lib/snacks/include/: coffee.hpp
lib/snacks/src/: coffee.cpp
libs/snacks/include/: coffee.hpp
snacks/: CMakeLists.txt
snacks/include/: coffee.hpp
snacks/src/: coffee.cpp
src/: Greeter.cpp  main.cpp
